--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "noImplicitAny": true,
-    "module": "es6",
-    "target": "es2017",
+    "module": "es2020", // es5
+    "target": "es2020", // es2017
     "allowJs": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
